--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,7 @@ RUN npm install
 
 FROM node:20-alpine
 EXPOSE 8080
-ENV DB_HOST=mysql
+ENV DB_HOST="mysql"
 RUN addgroup -S expense && adduser -S expense -G expense && \
     mkdir /opt/server && \
     chown -R expense:expense /opt/server
